--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@
   }
   
   body {
-    width: 600px;
+    width: 900px;
     margin: 0 auto;
     background-color: #ff9500;
     padding: 0 20px 20px 20px;
@@ -42,4 +42,5 @@
   img {
     display: block;
     margin: 0 auto;
+    width: 20;
   }
